     BUG#11898 ndb_mgmd not releasing resources, added "ping" on add_listener     + added close of some fd's     + debug prints